--- a/Project - Copy/src/main/resources/com/example/project/hello-view.fxml
+++ b/Project - Copy/src/main/resources/com/example/project/hello-view.fxml
@@ -6,11 +6,12 @@
 
 <?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.fis_restaurant.HelloController">
+      fx:controller="com.example.project.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
     <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    
+    <Button text="Click me" onAction="#onHelloButtonClick"/>
 </VBox>
