--- a/Project - Copy/src/main/java/logOut/LogOut_scene.fxml
+++ b/Project - Copy/src/main/java/logOut/LogOut_scene.fxml
@@ -4,8 +4,9 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane fx:id="Scene_LogOut" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <Button fx:id="LogOut_button" layoutX="274.0" layoutY="251.0" mnemonicParsing="false" onAction="#logout" text="Log Out" />
-   </children>
+<AnchorPane fx:id="Scene_LogOut" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" fx:controller="logOut.logOutController"
+            xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+   <Button fx:id="LogOut_button" layoutX="274.0" layoutY="251.0" mnemonicParsing="false" onAction="#logout"
+           text="Log Out"/>
 </AnchorPane>
