--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/FormInterface.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/FormInterface.fxml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<ScrollPane fx:id="ScrollingForm1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane fx:id="ScrollingForm1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
   <content>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="410.0" prefWidth="628.0">
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="410.0" prefWidth="628.0" style="-fx-background-color: #56738A;">
          <children>
-            <Label layoutX="40.0" layoutY="56.0" text="Food name" />
-            <Label layoutX="37.0" layoutY="85.0" text="Food ingredients" />
-            <Label layoutX="37.0" layoutY="116.0" text="Preparation Time" />
-            <Label layoutX="37.0" layoutY="171.0" text="Food Picture" />
+            <Label layoutX="40.0" layoutY="56.0" text="Food name" textFill="#faf0c5" />
+            <Label layoutX="37.0" layoutY="85.0" text="Food ingredients" textFill="#faf0c5" />
+            <Label layoutX="37.0" layoutY="116.0" text="Preparation Time" textFill="#faf0c5" />
+            <Label layoutX="37.0" layoutY="171.0" text="Food Picture" textFill="#faf0c5" />
             <TextField fx:id="txt_filename" layoutX="254.0" layoutY="167.0" />
             <TextField fx:id="Text_ingredients" layoutX="147.0" layoutY="52.0" />
             <TextField fx:id="Text_time" layoutX="147.0" layoutY="81.0" />
