--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/FormInterface.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/FormInterface.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<ScrollPane fx:id="ScrollingForm1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane fx:id="ScrollingForm1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuForm.controllers.MenuFormController">
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="410.0" prefWidth="628.0" style="-fx-background-color: #56738A;">
          <children>
@@ -16,14 +16,14 @@
             <Label layoutX="37.0" layoutY="116.0" text="Preparation Time" textFill="#faf0c5" />
             <Label layoutX="37.0" layoutY="171.0" text="Food Picture" textFill="#faf0c5" />
             <TextField fx:id="txt_filename" layoutX="254.0" layoutY="167.0" />
-            <TextField fx:id="Text_ingredients" layoutX="147.0" layoutY="52.0" />
-            <TextField fx:id="Text_time" layoutX="147.0" layoutY="81.0" />
+            <TextField fx:id="food_name" layoutX="147.0" layoutY="52.0" />
+            <TextField fx:id="food_ingredients" layoutX="147.0" layoutY="81.0" />
             <ImageView fx:id="Picture" fitHeight="178.0" fitWidth="268.0" layoutX="135.0" layoutY="198.0" pickOnBounds="true" preserveRatio="true" />
             <Label layoutX="254.0" layoutY="14.0" text="New Food Form" />
             <Button fx:id="Button_attach" layoutX="147.0" layoutY="167.0" mnemonicParsing="false" onAction="#AttachAction" text="Attach picture" />
 
              <Button fx:id="Button_submit" layoutX="461.0" layoutY="310.0" mnemonicParsing="false" onAction="#SubmitAction" text="Submit form" />
-            <TextField layoutX="147.0" layoutY="112.0" />
+            <TextField fx:id="prep_time" layoutX="147.0" layoutY="112.0" />
          </children></AnchorPane>
   </content>
 </ScrollPane>
