--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/CookLogOut.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/CookLogOut.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logOut.logOutController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: FAF0C5;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logOut.logOutController">
    <children>
-      <Button fx:id="CookLogOut" layoutX="183.0" layoutY="235.0" mnemonicParsing="false" onAction="#logout" text="yes, log out" />
+      <Button fx:id="CookLogOut" layoutX="183.0" layoutY="235.0" mnemonicParsing="false" onAction="#logout2" text="yes, log out" />
       <Button fx:id="backToCookMain" layoutX="310.0" layoutY="235.0" mnemonicParsing="false" onAction="#backToCookMain" text="no, continue shift" />
       <Label layoutX="272.0" layoutY="136.0" />
       <Label layoutX="222.0" layoutY="165.0" text="Is this the end of your shift?" />
