--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/timer.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/timer.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Timer.Controller">
    <children>
-      <Button layoutX="221.0" layoutY="175.0" mnemonicParsing="false" />
+      <Text fx:id="timer" layoutX="122.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="226.13671875" />
+      <TextField fx:id="alarmTime" layoutX="104.0" layoutY="150.0" />
    </children>
 </AnchorPane>
