--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/Cook_view.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/Cook_view.fxml
@@ -3,11 +3,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: FAF0C5;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Cook.CookView">
    <children>
-      <Button layoutX="260.0" layoutY="105.0" mnemonicParsing="false" text="View Orders" />
+      <Button layoutX="261.0" layoutY="71.0" mnemonicParsing="false" text="View Orders" />
       <Button fx:id="goToLogOut" layoutX="255.0" layoutY="244.0" mnemonicParsing="false" onAction="#goToLogOutScene" text="Order finished" />
-      <Button layoutX="232.0" layoutY="175.0" mnemonicParsing="false" text="View and Save Reviews" />
+      <Button layoutX="231.0" layoutY="188.0" mnemonicParsing="false" text="View and Save Reviews" />
+      <Button fx:id="stopwatch" layoutX="217.0" layoutY="125.0" mnemonicParsing="false" onAction="#goToTimerScene" text="Use the stopwatch for orders" />
    </children>
 </AnchorPane>
