--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/timer.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/timer.fxml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Timer.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: 0000000;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Timer.Controller">
    <children>
-      <Text fx:id="timer" layoutX="122.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="226.13671875" />
-      <TextField fx:id="alarmTime" layoutX="104.0" layoutY="150.0" />
+      <Button fx:id="stopwatchCook" layoutX="231.0" layoutY="145.0" mnemonicParsing="false" onAction="#stopwatchCook" style="-fx-background-color: FAF0C5;" text="Use the timer as a cook" />
+      <Button fx:id="stopwatchClient" layoutX="219.0" layoutY="228.0" mnemonicParsing="false" onAction="#stopwatchClient" style="-fx-background-color: D58490;" text="See the timer as a customer" />
    </children>
 </AnchorPane>
