--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/FormInterface.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/FormInterface.fxml
@@ -24,7 +24,8 @@
 
              <Button fx:id="Button_submit" layoutX="461.0" layoutY="310.0" mnemonicParsing="false" onAction="#SubmitAction" text="Submit form" />
             <TextField fx:id="prep_time" layoutX="147.0" layoutY="112.0" />
-            <Button fx:id="Back" layoutX="3.0" layoutY="10.0" mnemonicParsing="false" onAction="#backToMain" text="Back To Main Admin menu" />
+            <TextField fx:id="price" layoutX="444.0" layoutY="94.0" prefHeight="25.0" prefWidth="108.0" />
+            <Label layoutX="403.0" layoutY="98.0" text="Price" textFill="#faf0c5" />
          </children></AnchorPane>
   </content>
 </ScrollPane>
