--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/FormInterface.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/FormInterface.fxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<ScrollPane fx:id="ScrollingForm1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuForm.controllers.MenuFormController">
+<ScrollPane fx:id="ScrollingForm1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuForm.controllers.MenuFormController">
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="410.0" prefWidth="628.0" style="-fx-background-color: #56738A;">
          <children>
@@ -27,6 +24,7 @@
             <TextField fx:id="price" layoutX="444.0" layoutY="94.0" prefHeight="25.0" prefWidth="108.0" />
             <Label layoutX="403.0" layoutY="98.0" text="Price" textFill="#faf0c5" />
             <Button fx:id="ShowButton" layoutX="30.0" layoutY="322.0" mnemonicParsing="false" onAction="#ShowData" text="Show All" />
+            <Button fx:id="Button_delete" layoutX="243.0" layoutY="298.0" mnemonicParsing="false" onAction="#DeleteAction" text="Delete food" />
          </children></AnchorPane>
   </content>
 </ScrollPane>
