--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/DisplayMenu.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/DisplayMenu.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuForm.controllers.DisplayMenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #D58490;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuForm.controllers.DisplayMenuController">
    <children>
       <TableView fx:id="Table" layoutX="1.0" layoutY="11.0" prefHeight="385.0" prefWidth="593.0" style="-fx-background-color: #D58490;">
         <columns>
