--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/FormInterface.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/FormInterface.fxml
@@ -25,7 +25,7 @@
             <Label layoutX="403.0" layoutY="98.0" text="Price" textFill="#faf0c5" />
             <Button fx:id="ShowButton" layoutX="30.0" layoutY="322.0" mnemonicParsing="false" onAction="#ShowData" text="Show All" />
             <Button fx:id="Button_delete" layoutX="243.0" layoutY="298.0" mnemonicParsing="false" onAction="#DeleteAction" text="Delete food" />
-            <Button layoutX="243.0" layoutY="249.0" mnemonicParsing="false" text="Button" />
+            <Button fx:id="UpdatefoodTime" layoutX="243.0" layoutY="249.0" mnemonicParsing="false" onAction="#UpdateTime" text="Update_time" />
          </children></AnchorPane>
   </content>
 </ScrollPane>
