--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/FormInterface.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/FormInterface.fxml
@@ -1,31 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<ScrollPane fx:id="ScrollingForm1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuForm.controllers.MenuFormController">
+<ScrollPane fx:id="ScrollingForm1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="769.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuForm.controllers.MenuFormController">
   <content>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="410.0" prefWidth="628.0" style="-fx-background-color: #56738A;">
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="410.0" prefWidth="735.0" style="-fx-background-color: #56738A;">
          <children>
-            <Label layoutX="40.0" layoutY="56.0" text="Food name" textFill="#faf0c5" />
-            <Label layoutX="37.0" layoutY="85.0" text="Food ingredients" textFill="#faf0c5" />
-            <Label layoutX="37.0" layoutY="116.0" text="Preparation Time" textFill="#faf0c5" />
-            <Label layoutX="37.0" layoutY="171.0" text="Food Picture" textFill="#faf0c5" />
-            <TextField fx:id="txt_filename" layoutX="254.0" layoutY="167.0" />
-            <TextField fx:id="food_name" layoutX="147.0" layoutY="52.0" />
-            <TextField fx:id="food_ingredients" layoutX="147.0" layoutY="81.0" />
-            <ImageView fx:id="Picture" fitHeight="178.0" fitWidth="268.0" layoutX="135.0" layoutY="198.0" pickOnBounds="true" preserveRatio="true" />
-            <Label layoutX="254.0" layoutY="14.0" text="New Food Form" />
-            <Button fx:id="Button_attach" layoutX="147.0" layoutY="167.0" mnemonicParsing="false" onAction="#AttachAction" text="Attach picture" />
+            <Label layoutX="20.0" layoutY="22.0" text="Food name" textFill="#faf0c5" />
+            <Label layoutX="16.0" layoutY="56.0" text="Food ingredients" textFill="#faf0c5" />
+            <Label layoutX="16.0" layoutY="98.0" text="Preparation Time" textFill="#faf0c5" />
+            <Label layoutX="16.0" layoutY="133.0" text="Food Picture" textFill="#faf0c5" />
+            <TextField fx:id="txt_filename" layoutX="128.0" layoutY="137.0" />
+            <TextField fx:id="food_name" layoutX="128.0" layoutY="18.0" />
+            <TextField fx:id="food_ingredients" layoutX="128.0" layoutY="60.0" />
+            <ImageView fx:id="Picture" fitHeight="178.0" fitWidth="268.0" layoutX="128.0" layoutY="199.0" pickOnBounds="true" preserveRatio="true" />
+            <Button fx:id="Button_attach" layoutX="16.0" layoutY="179.0" mnemonicParsing="false" onAction="#AttachAction" text="Attach picture" />
 
-             <Button fx:id="Button_submit" layoutX="461.0" layoutY="310.0" mnemonicParsing="false" onAction="#SubmitAction" text="Submit form" />
-            <TextField fx:id="prep_time" layoutX="147.0" layoutY="112.0" />
-            <TextField fx:id="price" layoutX="444.0" layoutY="94.0" prefHeight="25.0" prefWidth="108.0" />
-            <Label layoutX="403.0" layoutY="98.0" text="Price" textFill="#faf0c5" />
-            <Button fx:id="ShowButton" layoutX="30.0" layoutY="322.0" mnemonicParsing="false" onAction="#ShowData" text="Show All" />
-            <Button fx:id="Button_delete" layoutX="243.0" layoutY="298.0" mnemonicParsing="false" onAction="#DeleteAction" text="Delete food" />
-            <Button fx:id="UpdatefoodTime" layoutX="243.0" layoutY="249.0" mnemonicParsing="false" onAction="#UpdateTime" text="Update_time" />
+             <Button fx:id="Button_submit" layoutX="129.0" layoutY="262.0" mnemonicParsing="false" onAction="#SubmitAction" text="Submit form" />
+            <TextField fx:id="prep_time" layoutX="128.0" layoutY="94.0" />
+            <TextField fx:id="price" layoutX="135.0" layoutY="205.0" prefHeight="25.0" prefWidth="108.0" />
+            <Label layoutX="37.0" layoutY="221.0" text="Price" textFill="#faf0c5" />
+            <Button fx:id="ShowButton" layoutX="30.0" layoutY="322.0" mnemonicParsing="false" onAction="#ShowData" text="Show Menu" />
+            <Button fx:id="Button_delete" layoutX="24.0" layoutY="262.0" mnemonicParsing="false" onAction="#DeleteAction" text="Delete food" />
+            <Button fx:id="UpdatefoodTime" layoutX="128.0" layoutY="322.0" mnemonicParsing="false" onAction="#UpdateTime" text="Update_time" />
+            <TableView fx:id="table" layoutX="310.0" layoutY="44.0" prefHeight="295.0" prefWidth="380.0">
+              <columns>
+                <TableColumn fx:id="name" prefWidth="75.0" text="Name" />
+                <TableColumn fx:id="ingredients" prefWidth="75.0" text="Ingredients" />
+                  <TableColumn fx:id="pricee" prefWidth="75.0" text="Price" />
+                  <TableColumn fx:id="picture" prefWidth="75.0" text="Picture" />
+                  <TableColumn fx:id="time" prefWidth="75.0" text="Time" />
+              </columns>
+            </TableView>
+            <Button fx:id="show" layoutX="396.0" layoutY="365.0" mnemonicParsing="false" onAction="#ViewAdmin" text="Show forms" />
          </children></AnchorPane>
   </content>
 </ScrollPane>
