--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/Review.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/Review.fxml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Review">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #D58490;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Review">
    <children>
       <Button fx:id="list" layoutX="127.0" layoutY="62.0" mnemonicParsing="false" onAction="#ListReviews" text="ListReviews" />
       <Button fx:id="save" layoutX="127.0" layoutY="115.0" mnemonicParsing="false" onAction="#SaveReview" text="SaveReview" />
-      <TextArea layoutX="227.0" layoutY="52.0" prefHeight="200.0" prefWidth="200.0" />
-      <Label layoutX="272.0" layoutY="25.0" text="Tell us your opinion" />
-      <Label layoutX="235.0" layoutY="260.0" text="Username" />
-      <TextField fx:id="check" layoutX="302.0" layoutY="256.0" onAction="#CheckUsername" />
+      <TextArea layoutX="227.0" layoutY="52.0" prefHeight="200.0" prefWidth="275.0" />
+      <Label layoutX="300.0" layoutY="14.0" prefHeight="25.0" prefWidth="133.0" text="Tell us your opinion">
+         <font>
+            <Font size="15.0" />
+         </font></Label>
+      <Label layoutX="245.0" layoutY="259.0" text="Username">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
+      <TextField fx:id="check" layoutX="335.0" layoutY="256.0" onAction="#CheckUsername" prefHeight="25.0" prefWidth="167.0" />
    </children>
 </AnchorPane>
