testRegistration works with RobotFx. Un caz de succes, un caz de failure, un caz de succes

--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/register.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/register.fxml
@@ -34,7 +34,7 @@
 
     <Text fx:id="registrationMessage" GridPane.columnIndex="1" GridPane.rowIndex="7" />
     <HBox alignment="bottom_right" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="5">
-        <Button onAction="#handleRegisterAction" text="Register" />
+        <Button fx:id="RegButton" onAction="#handleRegisterAction" text="Register" />
     </HBox>
    <Button fx:id="backToLogin" mnemonicParsing="false" onAction="#backToLogIn" text="Back to Log in" GridPane.columnIndex="1" GridPane.rowIndex="8" />
    <columnConstraints>
