--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/FormInterface.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/FormInterface.fxml
@@ -16,21 +16,21 @@
             <Label layoutX="20.0" layoutY="22.0" text="Food name" textFill="#faf0c5" />
             <Label layoutX="16.0" layoutY="56.0" text="Food ingredients" textFill="#faf0c5" />
             <Label layoutX="16.0" layoutY="98.0" text="Preparation Time" textFill="#faf0c5" />
-            <Label layoutX="16.0" layoutY="133.0" text="Food Picture" textFill="#faf0c5" />
+            <Label layoutX="16.0" layoutY="141.0" text="Food Picture" textFill="#faf0c5" />
             <TextField fx:id="txt_filename" layoutX="128.0" layoutY="137.0" />
             <TextField fx:id="food_name" layoutX="128.0" layoutY="18.0" />
             <TextField fx:id="food_ingredients" layoutX="128.0" layoutY="60.0" />
-            <ImageView fx:id="Picture" fitHeight="178.0" fitWidth="268.0" layoutX="128.0" layoutY="199.0" pickOnBounds="true" preserveRatio="true" />
-            <Button fx:id="Button_attach" layoutX="16.0" layoutY="179.0" mnemonicParsing="false" onAction="#AttachAction" text="Attach picture" />
+            <ImageView fx:id="Picture" fitHeight="162.0" fitWidth="246.0" layoutX="13.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true" />
+            <Button fx:id="Button_attach" layoutX="293.0" layoutY="137.0" mnemonicParsing="false" onAction="#AttachAction" prefHeight="25.0" prefWidth="61.0" text="Attach picture" />
 
-             <Button fx:id="Button_submit" layoutX="129.0" layoutY="262.0" mnemonicParsing="false" onAction="#SubmitAction" text="Submit form" />
+             <Button fx:id="Button_submit" layoutX="271.0" layoutY="185.0" mnemonicParsing="false" onAction="#SubmitAction" text="Submit form" />
             <TextField fx:id="prep_time" layoutX="128.0" layoutY="94.0" />
-            <TextField fx:id="price" layoutX="135.0" layoutY="205.0" prefHeight="25.0" prefWidth="108.0" />
-            <Label layoutX="37.0" layoutY="221.0" text="Price" textFill="#faf0c5" />
-            <Button fx:id="ShowButton" layoutX="30.0" layoutY="322.0" mnemonicParsing="false" onAction="#ShowData" text="Show Menu" />
-            <Button fx:id="Button_delete" layoutX="24.0" layoutY="262.0" mnemonicParsing="false" onAction="#DeleteAction" text="Delete food" />
-            <Button fx:id="UpdatefoodTime" layoutX="128.0" layoutY="322.0" mnemonicParsing="false" onAction="#UpdateTime" text="Update_time" />
-            <TableView fx:id="table" layoutX="310.0" layoutY="44.0" prefHeight="295.0" prefWidth="380.0">
+            <TextField fx:id="price" layoutX="129.0" layoutY="177.0" prefHeight="25.0" prefWidth="108.0" />
+            <Label layoutX="17.0" layoutY="181.0" text="Price" textFill="#faf0c5" />
+            <Button fx:id="ShowButton" layoutX="271.0" layoutY="309.0" mnemonicParsing="false" onAction="#ShowData" text="Show Menu" />
+            <Button fx:id="Button_delete" layoutX="272.0" layoutY="267.0" mnemonicParsing="false" onAction="#DeleteAction" text="Delete food" />
+            <Button fx:id="UpdatefoodTime" layoutX="270.0" layoutY="226.0" mnemonicParsing="false" onAction="#UpdateTime" text="Update_time" />
+            <TableView fx:id="table" layoutX="355.0" layoutY="14.0" prefHeight="295.0" prefWidth="380.0">
               <columns>
                 <TableColumn fx:id="name" prefWidth="75.0" text="Name" />
                 <TableColumn fx:id="ingredients" prefWidth="75.0" text="Ingredients" />
@@ -39,7 +39,8 @@
                   <TableColumn fx:id="time" prefWidth="75.0" text="Time" />
               </columns>
             </TableView>
-            <Button fx:id="show" layoutX="396.0" layoutY="365.0" mnemonicParsing="false" onAction="#ViewAdmin" text="Show forms" />
+            <Button fx:id="show" layoutX="554.0" layoutY="321.0" mnemonicParsing="false" onAction="#ViewAdmin" text="Show forms" />
+            <Button fx:id="logIn" layoutX="285.0" layoutY="346.0" mnemonicParsing="false" onAction="#goToLogin" text="Log in" />
          </children></AnchorPane>
   </content>
 </ScrollPane>
