--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/ReviewN.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/ReviewN.fxml
@@ -8,7 +8,7 @@
    <children>
       <Button fx:id="list" layoutX="127.0" layoutY="62.0" mnemonicParsing="false" onAction="#ListReviews" text="ListReviews" />
       <Button fx:id="save" layoutX="127.0" layoutY="115.0" mnemonicParsing="false" onAction="#SaveReview" text="SaveReview" />
-      <TextArea layoutX="227.0" layoutY="52.0" prefHeight="200.0" prefWidth="275.0" />
+      <TextArea fx:id="TextBoxReview" layoutX="227.0" layoutY="52.0" prefHeight="200.0" prefWidth="275.0" style="-fx-background-color: pink;" />
       <Label layoutX="300.0" layoutY="14.0" prefHeight="25.0" prefWidth="133.0" text="Tell us your opinion">
          <font>
             <Font size="15.0" />
@@ -20,5 +20,6 @@
       <TextField fx:id="check" layoutX="335.0" layoutY="256.0" prefHeight="25.0" prefWidth="167.0" />
       <Button layoutX="127.0" layoutY="161.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="Log out" />
       <Button fx:id="checkUs" layoutX="282.0" layoutY="294.0" mnemonicParsing="false" onAction="#checkUser" text="checkUsername" />
+      <Button fx:id="submitt" layoutX="109.0" layoutY="200.0" mnemonicParsing="false" onAction="#submittReview" text="Submitt review" />
    </children>
 </AnchorPane>
