--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/ReviewN.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/ReviewN.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #D58490;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Review.ReviewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #D58490;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Review.ReviewController">
    <children>
       <Button fx:id="list" layoutX="127.0" layoutY="62.0" mnemonicParsing="false" onAction="#ListReviews" text="ListReviews" />
       <Button fx:id="save" layoutX="127.0" layoutY="115.0" mnemonicParsing="false" onAction="#SaveReview" text="SaveReview" />
-      <TextArea fx:id="TextBoxReview" layoutX="227.0" layoutY="52.0" prefHeight="200.0" prefWidth="275.0" style="-fx-background-color: pink;" />
+      <TextArea fx:id="TextYourOpinion" layoutX="244.0" layoutY="40.0" prefHeight="200.0" prefWidth="275.0" />
       <Label layoutX="300.0" layoutY="14.0" prefHeight="25.0" prefWidth="133.0" text="Tell us your opinion">
          <font>
             <Font size="15.0" />
@@ -20,6 +23,5 @@
       <TextField fx:id="check" layoutX="335.0" layoutY="256.0" prefHeight="25.0" prefWidth="167.0" />
       <Button layoutX="127.0" layoutY="161.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="Log out" />
       <Button fx:id="checkUs" layoutX="282.0" layoutY="294.0" mnemonicParsing="false" onAction="#checkUser" text="checkUsername" />
-      <Button fx:id="submitt" layoutX="109.0" layoutY="200.0" mnemonicParsing="false" onAction="#submittReview" text="Submitt review" />
    </children>
 </AnchorPane>
