--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/ReviewN.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/ReviewN.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #D58490;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Review.ReviewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #D58490;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Review.controllers.ReviewController">
    <children>
       <Button fx:id="list" layoutX="127.0" layoutY="62.0" mnemonicParsing="false" onAction="#ListReviews" text="ListReviews" />
       <Button fx:id="save" layoutX="127.0" layoutY="115.0" mnemonicParsing="false" onAction="#SaveReview" text="SaveReview" />
