--- a/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/DisplayMenu.fxml
+++ b/RestaurantApp_FIS-FPS-1_login/Project - Copy/src/main/resources/DisplayMenu.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="759.0" style="-fx-background-color: #D58490;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuForm.controllers.DisplayMenuController">
    <children>
-      <TableView fx:id="Table" layoutX="-3.0" layoutY="7.0" prefHeight="385.0" prefWidth="766.0" style="-fx-background-color: #D58490;">
+      <TableView fx:id="Table" layoutX="-3.0" layoutY="7.0" prefHeight="335.0" prefWidth="766.0" style="-fx-background-color: #D58490;">
         <columns>
           <TableColumn fx:id="Name" prefWidth="111.33331298828125" text="Name" />
           <TableColumn fx:id="Ingredients" prefWidth="98.00003051757812" text="Ingredients" />
@@ -15,5 +16,6 @@
             <TableColumn fx:id="Picture" prefWidth="159.3333740234375" text="Picture" />
         </columns>
       </TableView>
+      <Button fx:id="order" layoutX="574.0" layoutY="361.0" mnemonicParsing="false" onAction="#AddOrder" text="Add  order" />
    </children>
 </AnchorPane>
