--- a/src/main/resources/AdminLogOut.fxml
+++ b/src/main/resources/AdminLogOut.fxml
@@ -2,6 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.Reflection?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -15,7 +18,7 @@
          <font>
             <Font size="23.0" />
          </font></Label>
-      <Label layoutX="84.0" layoutY="64.0" text="Hello, admin!" textFill="#faf0c5">
+      <Label layoutX="84.0" layoutY="64.0" text="Hello, admin !" textFill="#faf0c5">
          <font>
             <Font size="22.0" />
          </font></Label>
@@ -23,5 +26,13 @@
          <font>
             <Font size="17.0" />
          </font></Button>
+      <ImageView fitHeight="116.0" fitWidth="117.0" layoutX="14.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../New%20folder%20(3)/RestaurantApp_FIS/src/main/resources/images%20(1).png" />
+         </image>
+         <effect>
+            <Reflection />
+         </effect>
+      </ImageView>
    </children>
 </AnchorPane>
