--- a/src/main/resources/Admin_view.fxml
+++ b/src/main/resources/Admin_view.fxml
@@ -1,17 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #56739A;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Admin.AdminView">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #56739A;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Admin.AdminView">
    <children>
-      <Button fx:id="OpenFillForm" layoutX="238.0" layoutY="85.0" mnemonicParsing="false" onAction="#OpenForm" text="Add new menu item" />
-      <Button fx:id="Menu" layoutX="239.0" layoutY="145.0" mnemonicParsing="false" text="View all menu items" />
-      <Button fx:id="viewR" layoutX="251.0" layoutY="212.0" mnemonicParsing="false" onAction="#viewRev" text="View all reviews" />
+      <Button fx:id="OpenFillForm" layoutX="238.0" layoutY="63.0" mnemonicParsing="false" onAction="#OpenForm" prefHeight="47.0" prefWidth="205.0" text="Add new menu item &amp; view menu" />
+      <Button fx:id="viewR" layoutX="242.0" layoutY="152.0" mnemonicParsing="false" onAction="#viewRev" prefHeight="47.0" prefWidth="198.0" text="View all reviews" />
 
 
-      <Button fx:id="goToLogOut" layoutX="254.0" layoutY="272.0" mnemonicParsing="false" onAction="#goToLogOut" text="Log Out menu" />
+      <Button fx:id="goToLogOut" layoutX="241.0" layoutY="250.0" mnemonicParsing="false" onAction="#goToLogOut" prefHeight="47.0" prefWidth="198.0" text="Log Out menu" />
+      <ImageView fitHeight="47.0" fitWidth="72.0" layoutX="147.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../New%20folder%20(3)/RestaurantApp_FIS/src/main/resources/images.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="47.0" fitWidth="72.0" layoutX="147.0" layoutY="152.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../New%20folder%20(3)/RestaurantApp_FIS/src/main/resources/review4.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="47.0" fitWidth="72.0" layoutX="147.0" layoutY="250.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../New%20folder%20(3)/RestaurantApp_FIS/src/main/resources/3596149.png" />
+         </image>
+      </ImageView>
 
    </children>
 </AnchorPane>
