--- a/src/main/resources/Customer_view.fxml
+++ b/src/main/resources/Customer_view.fxml
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: D58490;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Customer.CustomerView">
    <children>
-      <Button fx:id="MakeOrder" layoutX="177.0" layoutY="116.0" mnemonicParsing="false" onAction="#DisplayMenu" text="Make an order" />
-      <Button fx:id="timerButton" layoutX="177.0" layoutY="230.0" mnemonicParsing="false" onAction="#goToTimerScene" text="See timer" />
-      <Button fx:id="goToLogOut" layoutX="177.0" layoutY="279.0" mnemonicParsing="false" onAction="#goToLogOutScene" text="Go to Log out menu" />
-      <Button fx:id="goReview" layoutX="178.0" layoutY="174.0" mnemonicParsing="false" onAction="#OpenReviewForm" text="Write a review" />
+      <Button fx:id="MakeOrder" layoutX="190.0" layoutY="65.0" mnemonicParsing="false" onAction="#DisplayMenu" prefHeight="58.0" prefWidth="160.0" text="Make an order" />
+      <Button fx:id="timerButton" layoutX="190.0" layoutY="247.0" mnemonicParsing="false" onAction="#goToTimerScene" prefHeight="58.0" prefWidth="160.0" text="See timer" />
+      <Button fx:id="goToLogOut" layoutX="190.0" layoutY="328.0" mnemonicParsing="false" onAction="#goToLogOutScene" prefHeight="58.0" prefWidth="160.0" text="Go to Log out menu" />
+      <Button fx:id="goReview" layoutX="190.0" layoutY="156.0" mnemonicParsing="false" onAction="#OpenReviewForm" prefHeight="58.0" prefWidth="160.0" text="Write a review" />
+      <ImageView fitHeight="58.0" fitWidth="76.0" layoutX="87.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../New%20folder%20(3)/RestaurantApp_FIS/src/main/resources/dinner-menu-icon-28.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="58.0" fitWidth="76.0" layoutX="95.0" layoutY="156.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../New%20folder%20(3)/RestaurantApp_FIS/src/main/resources/651191.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="58.0" fitWidth="76.0" layoutX="95.0" layoutY="240.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../New%20folder%20(3)/RestaurantApp_FIS/src/main/resources/18304.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="58.0" fitWidth="76.0" layoutX="95.0" layoutY="328.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../New%20folder%20(3)/RestaurantApp_FIS/src/main/resources/3596149.png" />
+         </image>
+      </ImageView>
 
    </children>
 </AnchorPane>
