--- a/src/main/resources/LogOut_scene.fxml
+++ b/src/main/resources/LogOut_scene.fxml
@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.effect.Reflection?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="Scene_LogOut" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logOut.logOutController">
-   <Button fx:id="LogOut_button" layoutX="274.0" layoutY="209.0" mnemonicParsing="false" onAction="#logout" prefHeight="67.0" prefWidth="96.0" text="Log Out" />
+<AnchorPane fx:id="Scene_LogOut" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logOut.logOutController">
+   <ImageView fitHeight="415.0" fitWidth="639.0" layoutX="-11.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@istockphoto-687564998-612x612.jpg" />
+      </image>
+   </ImageView>
+   <ImageView fitHeight="86.0" fitWidth="75.0" layoutX="488.0" layoutY="300.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@depositphotos_46719145-stock-photo-logout-icon.jpg" />
+      </image>
+      <effect>
+         <Reflection fraction="0.4" topOpacity="0.27" />
+      </effect>
+   </ImageView>
+   <Button fx:id="LogOut_button" layoutX="488.0" layoutY="300.0" mnemonicParsing="false" onAction="#logout" prefHeight="91.0" prefWidth="95.0" style="-fx-background-color: transparent;" />
 </AnchorPane>
